# campus-api

./: README.md  api_tree.json  api_tree.yaml  main.py  pyproject.toml  testing.py
.devcontainer/: post-create.sh
campus/: __init__.py  __main__.py  datatypes.py  default.json  modeltypes.py
campus/api/: __init__.py  api.py  base.py  circles.py  clients.py  http.py  users.py
campus/cli/: __init__.py  parser.py  pattern.py
campus/config/: __init__.py  utils.py
campus/operations/: __init__.py  clients.py  users.py
campus/schema/: datatypes.py  modeltypes.py
campus/utils/: __init__.py
campus/wrapper/: __init__.py  api.py  base.py  clients.py  http.py  users.py
campus_api_python/: __init__.py
campus_api_python/wrapper/: __init__.py  api.py  base.py  clients.py  users.py
cli/: commands.py
openapi/: components.py  datatypes.py  info.py  paths.py  request.py  response.py
openapi/schema/: __init__.py  components.py  datatypes.py  info.py  paths.py  reference.py  request.py  response.py  server.py
resources/: applications.py  clients.py
tests/: test_commands.py  test_parser.py
